# hermes-minimax-media

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hermes_minimax_media/: setup.py
src/hermes_minimax_media/plugins/image_gen/minimax/: __init__.py  plugin.yaml
src/hermes_minimax_media/plugins/music_gen/minimax/: __init__.py  plugin.yaml
src/hermes_minimax_media/plugins/video_gen/minimax/: __init__.py  plugin.yaml
tests/: conftest.py  test_minimax.py  test_music_gen_minimax.py  test_setup.py
